----------------

### Language features:

### Runtime system:

- #10025: Track custom blocks (e.g. Bigarray) with Statmemprof
  (Stephen Dolan, review by Leo White, Gabriel Scherer and Jacques-Henri
   Jourdan)

### Code generation and optimizations:

- #9937: improvements in ARM64 code generation (constants, sign extensions)
  (Xavier Leroy, review by Stephen Dolan)

### Standard library:

### Other libraries:

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

- #9650, #9651: keep refactoring the pattern-matching compiler
  (Gabriel Scherer, review by Thomas Refis and Florian Angeletti)

- #10007: Driver.compile_common: when typing a .ml file, return the
  compilation unit signature (inferred or from the .cmi) in addition
  to the implementation and the coercion.
  (Leandro Ostera, review by Gabriel Scherer and Thomas Refis)

### Build system:

### Bug fixes:

- #10005: Try expanding aliases in Ctype.nondep_type_rec
  (Stephen Dolan, review by Gabriel Scherer, Leo White and Xavier Leroy)


OCaml 4.12.0
------------

### Language features:

- #1655: pattern aliases do not ignore type constraints
  (Thomas Refis, review by Jacques Garrigue and Gabriel Scherer)

* #9500, #9727: Injectivity annotations
  One can now mark type parameters as injective, which is useful for
  abstract types:
    module Vec : sig type !'a t end = struct type 'a t = 'a array end
  On non-abstract types, this can be used to check the injectivity of
  parameters. Since all parameters of record and sum types are by definition
  injective, this only makes sense for type abbreviations:
    type !'a t = 'a list
  (Jacques Garrigue, review by Jeremy Yallop and Leo White)

- #9429: Add unary operators containing `#` to the parser for use in ppx
  rewriters
  (Leo White, review by Damien Doligez)

### Supported platforms:

- #9699: add support for iOS and macOS on ARM 64 bits